--- a/rebar.config
+++ b/rebar.config
@@ -28,22 +28,22 @@
 %% Common project dependencies.
 {deps, [
     {genlib,
-        {git, "git@github.com:rbkmoney/genlib.git",
+        {git, "https://github.com/rbkmoney/genlib.git",
             {branch, master}
         }
     },
     {bender_proto,
-        {git, "git@github.com:rbkmoney/bender-proto.git",
+        {git, "https://github.com/rbkmoney/bender-proto.git",
             {branch, master}
         }
     },
     {scoper,
-        {git, "git@github.com:rbkmoney/scoper.git",
+        {git, "https://github.com/rbkmoney/scoper.git",
             {branch, master}
         }
     },
     {woody,
-        {git, "git@github.com:rbkmoney/woody_erlang.git",
+        {git, "https://github.com/rbkmoney/woody_erlang.git",
             {branch, master}
         }
     }
@@ -74,7 +74,7 @@
 ]}.
 
 {plugins, [
-    {erlfmt, "0.8.0"}
+    {erlfmt, "0.10.0"}
 ]}.
 
 {erlfmt, [
