--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,5 @@
 %% Common project erlang options.
 {erl_opts, [
-
     % mandatory
     debug_info,
     warnings_as_errors,
@@ -27,26 +26,10 @@
 
 %% Common project dependencies.
 {deps, [
-    {genlib,
-        {git, "https://github.com/rbkmoney/genlib.git",
-            {branch, master}
-        }
-    },
-    {bender_proto,
-        {git, "https://github.com/rbkmoney/bender-proto.git",
-            {branch, master}
-        }
-    },
-    {scoper,
-        {git, "https://github.com/rbkmoney/scoper.git",
-            {branch, master}
-        }
-    },
-    {woody,
-        {git, "https://github.com/rbkmoney/woody_erlang.git",
-            {branch, master}
-        }
-    }
+    {genlib, {git, "https://github.com/rbkmoney/genlib.git", {branch, master}}},
+    {bender_proto, {git, "https://github.com/rbkmoney/bender-proto.git", {branch, master}}},
+    {scoper, {git, "https://github.com/rbkmoney/scoper.git", {branch, master}}},
+    {woody, {git, "https://github.com/rbkmoney/woody_erlang.git", {branch, master}}}
 ]}.
 
 %% XRef checks
@@ -79,5 +62,5 @@
 
 {erlfmt, [
     {print_width, 120},
-    {files, "{src,include,test}/*.{hrl,erl}"}
+    {files, ["{src,include,test}/*.{hrl,erl}", "rebar.config", "elvis.config"]}
 ]}.
